--- a/portfolio.html
+++ b/portfolio.html
@@ -100,106 +100,204 @@
       </div>
       <div class="container">
         <ul class="link portfolio-section">
-          <li>
-            <a class="link" href="#"
-              ><img
-                src="./images/laptop.jpg"
-                alt="laptop-tecnoduck"
-                width="370"
-                height="294"
-              />
+          <li class="card-container">
+            <a class="link" href="#">
+              <div class="animation-card-hidden">
+                <img
+                  src="./images/laptop.jpg"
+                  alt="laptop-tecnoduck"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-animation">
+                  <p>
+                    Tecnoduck es una plataforma de distribución de coronavirus
+                    de última generación. Las compañías usan esta plataforma
+                    para el espionaje digital y los ataques a los servidores
+                    seguros de la competencia.
+                  </p>
+                </div>
+              </div>
               <h3 class="project">Tecnoduck</h3>
-              <p class="detail-project">Sitio-web</p></a
-            >
+              <p class="detail-project">Sitio-web</p>
+            </a>
           </li>
-          <li>
-            <a class="link" href="#"
-              ><img
-                src="./images/posterbasketball.jpg"
-                alt="poster-basketball"
-                width="370"
-                height="294"
-              />
+          <li class="card-container">
+            <a class="link" href="#">
+              <div class="animation-card-hidden">
+                <img
+                  src="./images/posterbasketball.jpg"
+                  alt="poster-basketball"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-animation">
+                  <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Odio nesciunt reprehenderit libero repellat dicta quisquam,
+                    harum voluptates natus dolorem, porro doloribus obcaecati
+                    enim hic velit dolorum maiores error modi quo.
+                  </p>
+                </div>
+              </div>
               <h3 class="project">
                 Póster de Nueva Orleans vs <br />
                 Estrella Dorada
-              </h3></a
-            >
+              </h3>
+            </a>
           </li>
-          <li>
+          <li class="card-container">
             <a class="link" href="#">
-              <img
-                src="./images/restaurant.jpg"
-                alt="logo-restaurant"
-                width="370"
-                height="294"
-              />
-
+              <div class="animation-card-hidden">
+                <img
+                  src="./images/restaurant.jpg"
+                  alt="logo-restaurant"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-animation">
+                  <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Iure odit itaque temporibus! Delectus ab in asperiores,
+                    error atque omnis magni inventore maiores culpa fugiat
+                    dolorem fugit dolores mollitia ipsa magnam!
+                  </p>
+                </div>
+              </div>
               <h3 class="project">Restaurante Seafood</h3>
               <p class="detail-project">Aplicaciones</p></a
             >
           </li>
-          <li>
+          <li class="card-container">
             <a class="link" href="#"
-              ><img
-                src="./images/headphones.jpg"
-                alt="headphones"
-                width="370"
-                height="294"
-              />
+              ><div class="animation-card-hidden">
+                <img
+                  src="./images/headphones.jpg"
+                  alt="headphones"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-animation">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Iste error voluptate illum delectus minus! Corrupti
+                    reprehenderit labore, incidunt nesciunt magni porro,
+                    mollitia ducimus maiores ad quae quam facere voluptatum!
+                    Rem!s
+                  </p>
+                </div>
+              </div>
               <h3 class="project">Proyecto Prime</h3>
               <p class="detail-project">Marketing</p></a
             >
           </li>
-          <li>
+          <li class="card-container">
             <a class="link" href="#"
-              ><img src="./images/box.jpg" alt="box" width="370" height="294" />
+              ><div class="animation-card-hidden">
+                <img
+                  src="./images/box.jpg"
+                  alt="box"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-animation">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Veritatis provident asperiores autem incidunt ea accusamus,
+                    adipisci dolore perspiciatis tempora eum minus placeat
+                    sapiente voluptatem obcaecati? Ab, maiores. Aspernatur,
+                    porro iure.
+                  </p>
+                </div>
+              </div>
               <h3 class="project">Proyecto Cajas</h3>
               <p class="detail-project">Aplicaciones</p></a
             >
           </li>
-          <li>
+          <li class="card-container">
             <a class="link" href="#"
-              ><img src="./images/pc.jpg" alt="pc" width="370" height="294" />
+              ><div class="animation-card-hidden">
+                <img src="./images/pc.jpg" alt="pc" width="370" height="294" />
+                <div class="card-animation">
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Mollitia deserunt amet iure sapiente voluptates beatae in
+                    rerum possimus, debitis illo quae eveniet. Doloremque,
+                    voluptatibus perspiciatis. Reiciendis expedita quibusdam
+                    officia delectus?
+                  </p>
+                </div>
+              </div>
 
               <h3 class="project">La inspiración no tiene límites</h3>
               <p class="detail-project">Sitio-web</p></a
             >
           </li>
-          <li>
+          <li class="card-container">
             <a class="link" href="#"
-              ><img
-                src="./images/book.jpg"
-                alt="book"
-                width="370"
-                height="294"
-              />
+              ><div class="animation-card-hidden">
+                <img
+                  src="./images/book.jpg"
+                  alt="book"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-animation">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Tenetur recusandae totam eaque iusto mollitia veritatis eum
+                    odit! Beatae, sequi. Non reiciendis, ipsa cum soluta commodi
+                    ex tenetur. Et, laborum nostrum.
+                  </p>
+                </div>
+              </div>
 
               <h3 class="project">Edición Limitada</h3>
               <p class="detail-project">Diseño</p></a
             >
           </li>
-          <li>
+          <li class="card-container">
             <a class="link" href="#"
-              ><img
-                src="./images/proyectlab.jpg"
-                alt="proyect-marketing"
-                width="370"
-                height="294"
-              />
+              ><div class="animation-card-hidden">
+                <img
+                  src="./images/proyectlab.jpg"
+                  alt="proyect-marketing"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-animation">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consectetur nulla fugiat vitae officia, quam veniam odit
+                    sit, fuga, quisquam doloribus quis. Necessitatibus eaque
+                    dicta dolores maxime maiores amet dolorum similique.
+                  </p>
+                </div>
+              </div>
 
               <h3 class="project">Proyecto LAB</h3>
               <p class="detail-project">Marketing</p></a
             >
           </li>
-          <li>
+          <li class="card-container">
             <a class="link" href="#"
-              ><img
-                src="./images/bussines.jpg"
-                alt="app-bussines"
-                width="370"
-                height="294"
-              />
+              ><div class="animation-card-hidden">
+                <img
+                  src="./images/bussines.jpg"
+                  alt="app-bussines"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-animation">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Voluptatum rem nesciunt, quasi consequatur consectetur
+                    laudantium eveniet asperiores autem reprehenderit. Voluptate
+                    voluptatem qui dolorem blanditiis molestias possimus rerum
+                    tempora facere illum!
+                  </p>
+                </div>
+              </div>
               <h3 class="project">Negocio en Crecimiento</h3>
               <p class="detail-project">Aplicaciones</p></a
             >
