--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <section class="bg-main hero">
         <h1 class="text-white">SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
         <div>
-          <button class="button" type="button">
+          <button class="button" type="button" data-modal-open>
             Solicite nuestro servicio
           </button>
         </div>
@@ -427,5 +427,15 @@
         </div>
       </footer>
     </div>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" data-modal-close>
+          <svg class="" width="11" height="11">
+            <use href="./images/close-modal.svg#icon-close-modal"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
